--- a/.gitmodules
+++ b/.gitmodules
@@ -2,11 +2,11 @@
 	path = src/repository.supmagc
 	url = git@github.com:supmagc/kodi-repository.supmagc.git
 	branch = master
-[submodule "src/resource.images.moviegenreicons.xzener-flat.dutch"]
-	path = src/resource.images.moviegenreicons.xzener-flat.dutch
-	url = git@github.com:supmagc/kodi-resource.images.moviegenreicons.xzener-flat.dutch.git
+[submodule "src/resource.images.moviegenreicons.xzener-flat-dutch"]
+	path = src/resource.images.moviegenreicons.xzener-flat-dutch
+	url = git@github.com:supmagc/kodi-resource.images.moviegenreicons.xzener-flat-dutch.git
 	branch = master
-[submodule "src/resource.images.moviegenreicons.grey.dutch"]
-	path = src/resource.images.moviegenreicons.grey.dutch
-	url = git@github.com:supmagc/kodi-resource.images.moviegenreicons.grey.dutch.git
+[submodule "src/resource.images.moviegenreicons.grey-dutch"]
+	path = src/resource.images.moviegenreicons.grey-dutch
+	url = git@github.com:supmagc/kodi-resource.images.moviegenreicons.grey-dutch.git
 	branch = master
